Frequent freezes/crashes in the Video Sequencer #74662

Closed
opened 2020-03-11 20:27:06 +01:00 by Sol Bekic · 11 comments

System Information
Operating system: Arch Linux (kernel 5.5.8-arch1-1)
Graphics card: NVIDIA GeForce GTX 1070

system-info.txt is attached: system-info.txt

Blender Version
Installed from ArchLinux repository

  • pkg version 17:2.82-2
  • version 2.82 (sub 7)
  • commit date 2020-02-13, hash 5b416ffb848e
  • build date 2020-02-28

When editing videos in the sequencer, I experience frequent freezes. The whole UI becomes unresponsive and does no longer process X-Server damage events. There is no output in the console. Using gdb I can see that the process is still going, and when I interrupt it I am always somewhere in this stack trace:

- 0  0x00005555565ca3b1 in seq_cache_hashhash ()
- 1  0x00005555586300ab in BLI_ghash_remove ()
- 2  0x00005555565ca4eb in seq_cache_recycle_linked ()
- 3  0x00005555565ca8b6 in BKE_sequencer_cache_recycle_item ()
- 4  0x00005555565cb3bd in BKE_sequencer_cache_put_if_possible ()
- 5  0x0000555556506cfc in BKE_sequencer_give_ibuf ()
- 6  0x0000555556c4fc13 in sequencer_ibuf_get ()
- 7  0x0000555556c4fe12 in sequencer_draw_preview ()
- 8  0x0000555556c5e101 in sequencer_preview_region_draw ()
- 9  0x0000555556915351 in ED_region_do_draw ()
- 10 0x00005555565ea5af in wm_draw_update ()
- 11 0x00005555565e84f4 in WM_main ()
#12 0x00005555563fa984 in main ()

The precise stack trace varies of course, but with ~10 tests I always end up with the same up to depth #1 pictured here. Above that it seems like there is a (near) infinite loop around seq_cache_hashcmp, seq_cache_hashhash' and ghash_remove_ex`.

Reproduction: I am not sure how to reproduce this from scratch, it happens to me reliably in intervals of around 5-20 minutes when editing. Given the stack trace, it seems related to my preview settings. I am unsure how to share them in detail, so I will attach my .blend file and do a short summary. Please let me know which further information I can provide to help diagnose this issue.

  • Preview - View Settings

    • Proxy Render Size: 25%
    • Prefetch Frames: yes
  • Sequencer - View - Cache

    • Show Cache: yes
    • Final Images: yes
    • Raw Images: no
    • Preprocessed Images: yes
    • Composite Images: no
    • (I have varied some of these settings but noticed no difference)
  • Strips - Proxy & Cache

    • Cache Settings
      • all caches enabled
      • recycle up to cost: 10
    • Proxy Settings
      • Storage: project
      • Directory: //proxies/
    • Strip Proxy & Timecode
      • 25%
      • set using 'Set Selected Strip Proxies'
      • built once at the beginning of the project

deadbug.blend

**System Information** Operating system: Arch Linux (kernel 5.5.8-arch1-1) Graphics card: NVIDIA GeForce GTX 1070 system-info.txt is attached: [system-info.txt](https://archive.blender.org/developer/F8401092/system-info.txt) **Blender Version** Installed from ArchLinux repository - pkg version `17:2.82-2` - version `2.82 (sub 7)` - commit date `2020-02-13`, hash `5b416ffb848e` - build date `2020-02-28` When editing videos in the sequencer, I experience frequent freezes. The whole UI becomes unresponsive and does no longer process X-Server damage events. There is no output in the console. Using `gdb` I can see that the process is still going, and when I interrupt it I am always somewhere in this stack trace: ``` - 0 0x00005555565ca3b1 in seq_cache_hashhash () - 1 0x00005555586300ab in BLI_ghash_remove () - 2 0x00005555565ca4eb in seq_cache_recycle_linked () - 3 0x00005555565ca8b6 in BKE_sequencer_cache_recycle_item () - 4 0x00005555565cb3bd in BKE_sequencer_cache_put_if_possible () - 5 0x0000555556506cfc in BKE_sequencer_give_ibuf () - 6 0x0000555556c4fc13 in sequencer_ibuf_get () - 7 0x0000555556c4fe12 in sequencer_draw_preview () - 8 0x0000555556c5e101 in sequencer_preview_region_draw () - 9 0x0000555556915351 in ED_region_do_draw () - 10 0x00005555565ea5af in wm_draw_update () - 11 0x00005555565e84f4 in WM_main () #12 0x00005555563fa984 in main () ``` The precise stack trace varies of course, but with ~10 tests I always end up with the same up to depth #1 pictured here. Above that it seems like there is a (near) infinite loop around `seq_cache_hashcmp`, `seq_cache_hashhash' and `ghash_remove_ex`. Reproduction: I am not sure how to reproduce this from scratch, it happens to me reliably in intervals of around 5-20 minutes when editing. Given the stack trace, it seems related to my preview settings. I am unsure how to share them in detail, so I will attach my .blend file and do a short summary. Please let me know which further information I can provide to help diagnose this issue. - Preview - View Settings - Proxy Render Size: 25% - Prefetch Frames: yes - Sequencer - View - Cache - Show Cache: yes - Final Images: yes - Raw Images: no - Preprocessed Images: yes - Composite Images: no - (I have varied some of these settings but noticed no difference) - Strips - Proxy & Cache - Cache Settings - all caches enabled - recycle up to cost: 10 - Proxy Settings - Storage: project - Directory: `//proxies/` - Strip Proxy & Timecode - 25% - set using 'Set Selected Strip Proxies' - built once at the beginning of the project [deadbug.blend](https://archive.blender.org/developer/F8401098/deadbug.blend)
Author

Added subscriber: @s-ol

Added subscriber: @s-ol

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @iss

Added subscriber: @iss

This will have probably same roots as #74603, will have to investigate

This will have probably same roots as #74603, will have to investigate

Added subscriber: @user1

Added subscriber: @user1

I experienced the same behavior yesterday when i tried to track footage (VFX). I think my PC tried to tell me about a memory leakage. Whithin minutes the PC response turned from ok to total system freeze in an exponentially curved manner.

I experienced the same behavior yesterday when i tried to track footage (VFX). I think my PC tried to tell me about a memory leakage. Whithin minutes the PC response turned from ok to total system freeze in an exponentially curved manner.

Two minutes after i launch this file i can brute force interrupt my freezed PC:
tracktest.blend
Bildschirmfoto zu 2020-03-18 11-24-18.png
and since i got an error message while packing my footage for you, here the footage:
Rec-2020-03-17_17.12.02.mp4
Donalds rocket drawing.png

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-16 17:25, hash: 120a38ccbe

Two minutes after i launch this file i can brute force interrupt my freezed PC: [tracktest.blend](https://archive.blender.org/developer/F8413635/tracktest.blend) ![Bildschirmfoto zu 2020-03-18 11-24-18.png](https://archive.blender.org/developer/F8413640/Bildschirmfoto_zu_2020-03-18_11-24-18.png) and since i got an error message while packing my footage for you, here the footage: [Rec-2020-03-17_17.12.02.mp4](https://archive.blender.org/developer/F8413645/Rec-2020-03-17_17.12.02.mp4) ![Donalds rocket drawing.png](https://archive.blender.org/developer/F8413649/Donalds_rocket_drawing.png) **System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-16 17:25, hash: `120a38ccbe`

In #74662#893320, @user1 wrote:
Two minutes after i launch this file i can brute force interrupt my freezed PC:

Porbably best demo file, but this has nothing to do with original report, and you should make new one

> In #74662#893320, @user1 wrote: > Two minutes after i launch this file i can brute force interrupt my freezed PC: Porbably best demo file, but this has nothing to do with original report, and you should make new one

This issue was referenced by 188ccfb0dd

This issue was referenced by 188ccfb0dd6739fb6af8741aeecbc1da82c068ab

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-03-25 00:26:34 +01:00

@s-ol I committed fix, please check daily build in friday, I have missed today's build.

I am not 100% sure this will fix your issue so please let me know if you still have problems

@s-ol I committed fix, please check daily build in friday, I have missed today's build. I am not 100% sure this will fix your issue so please let me know if you still have problems
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74662
No description provided.